async-coap-uri/proc-macros/tests/ui/assert_uri_literal/invalid_literal.stderr
error: expected string literal, found int
 --> $DIR/invalid_literal.rs:7:25
  |
7 |     assert_uri_literal!(123);
  |                         ^^^
  |
  = note: this error originates in a macro (in Nightly builds, run with -Z macro-backtrace for more info)
